--- a/src/benchmark/CMakeLists.txt
+++ b/src/benchmark/CMakeLists.txt
@@ -1,5 +1,29 @@
 
 
+add_subdirectory(instrumentation)
+
+foreach(_platform ${AnyQ_PLATFORMS})
+	set(_target benchmark_harness_${_platform})
+
+	add_library(${_target} STATIC
+		${CMAKE_CURRENT_SOURCE_DIR}/benchmark.cpp
+	)
+
+	target_link_libraries(${_target} PRIVATE instrumentation_${_platform})
+
+	set_target_properties(${_target} PROPERTIES
+		CXX_STANDARD 17
+		CXX_STANDARD_REQUIRED ON
+		CXX_EXTENSIONS OFF
+	)
+
+	# if (MSVC)
+	# 	target_compile_options(${_target} PRIVATE /W4 /WX /permissive-)
+	# 	target_compile_definitions(${_target} PRIVATE -D_CRT_SECURE_NO_WARNINGS -D_SCL_SECURE_NO_WARNINGS)
+	# endif ()
+endforeach()
+
+
 set(COMMON_BENCHMARK_FILES
 	${CMAKE_CURRENT_SOURCE_DIR}/../framework.art
 	${CMAKE_CURRENT_SOURCE_DIR}/../utils.art
@@ -10,23 +34,6 @@ set(COMMON_BENCHMARK_FILES
 
 source_group("Source Files" FILES ${COMMON_BENCHMARK_FILES})
 
-
-add_library(benchmark_harness STATIC
-	${CMAKE_CURRENT_SOURCE_DIR}/benchmark.cpp
-)
-
-set_target_properties(benchmark_harness PROPERTIES
-	CXX_STANDARD 17
-	CXX_STANDARD_REQUIRED ON
-	CXX_EXTENSIONS OFF
-)
-
-# if (MSVC)
-# 	target_compile_options(benchmark_harness PRIVATE /W4 /WX /permissive-)
-# 	target_compile_definitions(benchmark_harness PRIVATE -D_CRT_SECURE_NO_WARNINGS -D_SCL_SECURE_NO_WARNINGS)
-# endif ()
-
-
 function(add_benchmark _testfile _mapping)
 	get_filename_component(_testname ${_testfile} NAME_WE)
 	set(_target "${_testname}-${_mapping}")
@@ -36,7 +43,7 @@ function(add_benchmark _testfile _mapping)
 	if(ADDITIONAL_LINK_DEPENDENCY)
 		target_link_libraries(${_target} PRIVATE ${ADDITIONAL_LINK_DEPENDENCY})
 	endif()
-	target_link_libraries(${_target} PRIVATE benchmark_harness)
+	target_link_libraries(${_target} PRIVATE benchmark_harness_${_mapping})
 	add_dependencies(benchmark-${_mapping} ${_target})
 endfunction()
 
