--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -4,15 +4,39 @@ set(COMMON_TEST_FILES
 	${CMAKE_CURRENT_SOURCE_DIR}/../framework.art
 	${CMAKE_CURRENT_SOURCE_DIR}/../utils.art
 	${CMAKE_CURRENT_SOURCE_DIR}/../random.art
+)
+
+set(COMMON_TEST_SUITE_FILES
+	${CMAKE_CURRENT_SOURCE_DIR}/test-suite.art
+)
+
+set(COMMON_SCHEDULE_TEST_FILES
 	${CMAKE_CURRENT_SOURCE_DIR}/test-producer-consumer-queue-common.art
 	${CMAKE_CURRENT_SOURCE_DIR}/test-producer-consumer-queue-push-and-then-pop.art
 	${CMAKE_CURRENT_SOURCE_DIR}/test-producer-consumer-queue-concurrent-push-pop.art
 )
 
-source_group("Source Files" FILES ${COMMON_TEST_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/test-suite.art)
+source_group("Source Files" FILES ${COMMON_TEST_FILES} ${COMMON_TEST_SUITE_FILES} ${COMMON_SCHEDULE_TEST_FILES})
 
 
-function(add_testcase _target _testfile _mapping)
+function(add_test_executable _target _mapping)
+	if (NOT TARGET test-${_mapping})
+		add_custom_target(test-${_mapping})
+	endif()
+
+	# message("add_test_executable ${_target} ${_mapping} ${ARGN}")
+
+	add_anydsl_executable(${_target} ${COMMON_TEST_FILES} ${COMMON_ARTIC_FILES} "${AnyQ_SOURCE_DIR}/mapping_${_mapping}.art" ${ARGN})
+	set_target_properties(${_target} PROPERTIES FOLDER "tests/${_mapping}" )
+	set(ADDITIONAL_LINK_DEPENDENCY ${ADDITIONAL_LINK_DEPENDENCY_${_mapping}})
+	# message(STATUS "ADDITIONAL_LINK_DEPENDENCY: ${ADDITIONAL_LINK_DEPENDENCY}")
+	if(ADDITIONAL_LINK_DEPENDENCY)
+		target_link_libraries(${_target} PRIVATE ${ADDITIONAL_LINK_DEPENDENCY})
+	endif()
+	add_dependencies(test-${_mapping} ${_target})
+endfunction()
+
+function(add_test_with_emitted_instruction_check _target _mapping _testfile)
 	if(_mapping STREQUAL "cpu" AND Python3_FOUND)
 		# message(STATUS "add advanced test for ${_testfile}")
 		get_filename_component(_srcfile ${_testfile} ABSOLUTE)
@@ -35,18 +59,18 @@ function(add_testcase _target _testfile _mapping)
 	add_test(NAME "${_target}" COMMAND ${_test_command} WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
 endfunction()
 
-function(add_schedule_test _testfile _mapping)
+function(add_test_suite_testcase _mapping _testfile)
 	get_filename_component(_testname ${_testfile} NAME_WE)
 	set(_target "${_testname}-${_mapping}")
-	add_anydsl_executable(${_target} ${COMMON_TEST_FILES} ${COMMON_ARTIC_FILES} "${AnyQ_SOURCE_DIR}/mapping_${_mapping}.art" ${_testfile} ${ARGN})
-	set_target_properties(${_target} PROPERTIES FOLDER "tests/${_mapping}" )
-	set(ADDITIONAL_LINK_DEPENDENCY ${ADDITIONAL_LINK_DEPENDENCY_${_mapping}})
-	# message(STATUS "ADDITIONAL_LINK_DEPENDENCY: ${ADDITIONAL_LINK_DEPENDENCY}")
-	if(ADDITIONAL_LINK_DEPENDENCY)
-		target_link_libraries(${_target} PRIVATE ${ADDITIONAL_LINK_DEPENDENCY})
-	endif()
-	add_testcase(${_target} ${_testfile} ${_mapping})
-	add_dependencies(test-${_mapping} ${_target})
+	add_test_executable(${_target} ${_mapping} ${_testfile} ${COMMON_TEST_SUITE_FILES})
+	add_test_with_emitted_instruction_check(${_target} ${_mapping} ${_testfile})
+endfunction()
+
+function(add_schedule_test _mapping _testfile)
+	get_filename_component(_testname ${_testfile} NAME_WE)
+	set(_target "${_testname}-${_mapping}")
+	add_test_executable(${_target} ${_mapping} ${_testfile} ${COMMON_SCHEDULE_TEST_FILES})
+	add_test(NAME "${_target}" COMMAND ${_target} WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
 endfunction()
 
 
@@ -89,14 +113,12 @@ set(TEST_SUITE_FILES
 
 
 foreach(_test_platform ${AnyQ_PLATFORMS})
-	add_custom_target(test-${_test_platform})
-
-	foreach(_test_schedule ${TEST_SCHEDULE_FILES})
-		add_schedule_test(${_test_schedule} ${_test_platform})
+	foreach(_test_case ${TEST_SCHEDULE_FILES})
+		add_schedule_test(${_test_platform} ${_test_case})
 	endforeach()
 
 	foreach(_test_case ${TEST_SUITE_FILES})
-		add_schedule_test(${_test_case} ${_test_platform} ${CMAKE_CURRENT_SOURCE_DIR}/test-suite.art)
+		add_test_suite_testcase(${_test_platform} ${_test_case})
 	endforeach()
 endforeach()
 
