--- a/src/test/rv-test-suite/CMakeLists.txt
+++ b/src/test/rv-test-suite/CMakeLists.txt
@@ -19,7 +19,7 @@ if (Thorin_HAS_RV_SUPPORT)
 			add_anydsl_executable(${_target} "${CMAKE_CURRENT_SOURCE_DIR}/main.art" ${_test_filename} ${_test_impl})
 			set_target_properties(${_target} PROPERTIES FOLDER "tests/rv" )
 			if (BUILD_TESTING)
-				add_testcase(${_target} ${_test_filename} cpu)
+				add_test_with_emitted_instruction_check(${_target} cpu ${_test_filename})
 			endif()
 		endforeach()
 	endforeach()
