--- a/src/test/fiber-test-suite/CMakeLists.txt
+++ b/src/test/fiber-test-suite/CMakeLists.txt
@@ -36,4 +36,5 @@ foreach(_test_case ${TEST_SUITE_FILES})
 	get_filename_component(_testname ${_test_case} NAME_WE)
 	add_test_executable(${_testname}-cpu cpu ${_test_case} ${CMAKE_CURRENT_SOURCE_DIR}/fiber-test-suite.art)
 	set_target_properties(${_testname}-cpu PROPERTIES FOLDER "tests/fibers")
+	add_test(NAME "${_testname}-cpu" COMMAND ${_testname}-cpu WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
 endforeach()
