Replace relative path to parent directory

--- a/src/benchmark/CMakeLists.txt
+++ b/src/benchmark/CMakeLists.txt
@@ -25,9 +25,9 @@ endforeach()
 
 
 set(COMMON_BENCHMARK_FILES
-	${CMAKE_CURRENT_SOURCE_DIR}/../framework.art
-	${CMAKE_CURRENT_SOURCE_DIR}/../utils.art
-	${CMAKE_CURRENT_SOURCE_DIR}/../random.art
+	${AnyQ_SOURCE_DIR}/framework.art
+	${AnyQ_SOURCE_DIR}/utils.art
+	${AnyQ_SOURCE_DIR}/random.art
 	${CMAKE_CURRENT_SOURCE_DIR}/benchmark-common.art
 	${CMAKE_CURRENT_SOURCE_DIR}/benchmark-producer-consumer-queue-concurrent-push-pop.art
 )
