--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -1,9 +1,9 @@
 
 
 set(COMMON_TEST_FILES
-	${CMAKE_CURRENT_SOURCE_DIR}/../framework.art
-	${CMAKE_CURRENT_SOURCE_DIR}/../utils.art
-	${CMAKE_CURRENT_SOURCE_DIR}/../random.art
+	${AnyQ_SOURCE_DIR}/framework.art
+	${AnyQ_SOURCE_DIR}/utils.art
+	${AnyQ_SOURCE_DIR}/random.art
 )
 
 set(COMMON_TEST_SUITE_FILES
