reorganize benchmark parameters (completes #39)

--- a/src/benchmark/CMakeLists.txt
+++ b/src/benchmark/CMakeLists.txt
@@ -53,15 +53,9 @@ function(generate_benchmarks template_file platform)
 	get_filename_component(dest_name ${template_file} NAME_WE)
 
 	foreach(queue_size 10000 100000 1000000)
-		foreach(p_enq 100 50 25)
-			foreach(p_deq 100 50 25)
-				foreach(workload_size 1 8 32)
-					set(dest_file "${dest_dir}/${dest_name}-IQ-${queue_size}-${p_enq}-${p_deq}-${workload_size}.art")
-					configure_file(${template_file} ${dest_file})
-					add_benchmark(${dest_file} ${platform})
-				endforeach()
-			endforeach()
-		endforeach()
+		set(dest_file "${dest_dir}/${dest_name}-IQ-${queue_size}.art")
+		configure_file(${template_file} ${dest_file})
+		add_benchmark(${dest_file} ${platform})
 	endforeach()
 endfunction()
 
