--- a/.drone.yml
+++ b/.drone.yml
@@ -10,15 +10,17 @@ steps:
 
   - name: upload
     image: plugins/drone-sftp
-    host: 134.96.220.231
-    port: 443
-    username: lemme
-    password:
-      from_secret: EGON_PASSWORD
-    destination_path: /anyq
-    files:
-      - index.html
-      - data.js
+    settings:
+      host: 134.96.220.231
+      port: 443
+      username:
+        from_secret: EGON_USERNAME
+      password:
+        from_secret: EGON_PASSWORD
+      destination_path: /anyq
+      files:
+        - index.html
+        - data.js
 
 node:
   env: cguds-warrior
