Add instrumentation for macOS.

--- a/src/benchmark/instrumentation/CMakeLists.txt
+++ b/src/benchmark/instrumentation/CMakeLists.txt
@@ -4,6 +4,8 @@ if (cpu IN_LIST AnyQ_PLATFORMS)
 	add_library(instrumentation_cpu STATIC)
 	if (WIN32)
 		target_sources(instrumentation_cpu PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/cpu/instrumentation_win32.cpp)
+	elseif(APPLE)
+		target_sources(instrumentation_cpu PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/cpu/instrumentation_darwin.cpp)
 	else()
 		target_sources(instrumentation_cpu PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/cpu/instrumentation_linux.cpp)
 	endif()
