refactor queue test infrastructure to handle different queue types (completes #47)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -26,9 +26,10 @@ set(COMMON_ARTIC_FILES
 	${CMAKE_CURRENT_SOURCE_DIR}/gpu.art
 	${CMAKE_CURRENT_SOURCE_DIR}/atomic.art
 	${CMAKE_CURRENT_SOURCE_DIR}/producer_consumer_queue.art
+	${CMAKE_CURRENT_SOURCE_DIR}/queues/michael_scott.art
 	# ${CMAKE_CURRENT_SOURCE_DIR}/ringbuffer_allocator.art
 	# ${CMAKE_CURRENT_SOURCE_DIR}/pipeline.art
-    ${CMAKE_CURRENT_SOURCE_DIR}/utils-$<LOWER_CASE:$<CONFIG>>.art
+	${CMAKE_CURRENT_SOURCE_DIR}/utils-$<LOWER_CASE:$<CONFIG>>.art
 )
 
 source_group("Source Files" FILES ${COMMON_ARTIC_FILES})
